--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 
 html, body {
     margin: 0;
@@ -7,7 +6,7 @@ html, body {
     /* height: 100%; */
     width: 100%;
     scroll-behavior: smooth;
-    font-family: "Proxima Nova", sans-serif;
+    font-family: "Raleway", sans-serif;
 
 }
 
