--- a/style.css
+++ b/style.css
@@ -99,10 +99,8 @@ p {
 
 .card-container {
     width: 70%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: auto;
-    grid-gap: 1rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 .card {
